# nautilus-my-computer

./: .gitignore  README.md  ROADMAP.md  install.sh  nautilus-my-computer.py  pyproject.toml
.github/workflows/: lint.yml
